// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert - danger Action Close Button 1`] = `
<Alert
  actionClose={
    <AlertActionCloseButton
      aria-label="Close"
      onClose={[MockFunction]}
    />
  }
  title="Sample danger alert"
  variant="danger"
>
  <div
    aria-label="Danger Alert"
    className="pf-c-alert pf-m-danger"
    data-ouia-component-id="OUIA-Alert-danger-4"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="danger"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              transform=""
            />
          </svg>
        </ExclamationCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Danger alert:
      </span>
      Sample danger alert
    </h4>
    <div
      className="pf-c-alert__action"
    >
      <AlertActionCloseButton
        aria-label="Close"
        onClose={[MockFunction]}
      >
        <Button
          aria-label="Close"
          onClick={[MockFunction]}
          variant="plain"
        >
          <button
            aria-disabled={false}
            aria-label="Close"
            className="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Button-plain-2"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <TimesIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  transform=""
                />
              </svg>
            </TimesIcon>
          </button>
        </Button>
      </AlertActionCloseButton>
    </div>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - danger Action Link 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  title=""
  variant="danger"
>
  <div
    aria-label="Danger Alert"
    className="pf-c-alert pf-m-danger"
    data-ouia-component-id="OUIA-Alert-danger-3"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="danger"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              transform=""
            />
          </svg>
        </ExclamationCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Danger alert:
      </span>
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Button-link-4"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - danger Action and Title 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  title="Some title"
  variant="danger"
>
  <div
    aria-label="Danger Alert"
    className="pf-c-alert pf-m-danger"
    data-ouia-component-id="OUIA-Alert-danger-5"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="danger"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              transform=""
            />
          </svg>
        </ExclamationCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Danger alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Button-link-5"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - danger Custom aria label 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  aria-label="Custom aria label for danger"
  title="Some title"
  variant="danger"
>
  <div
    aria-label="Custom aria label for danger"
    className="pf-c-alert pf-m-danger"
    data-ouia-component-id="OUIA-Alert-danger-6"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="danger"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              transform=""
            />
          </svg>
        </ExclamationCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Danger alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Button-link-6"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - danger Description 1`] = `
<Alert
  title=""
  variant="danger"
>
  <div
    aria-label="Danger Alert"
    className="pf-c-alert pf-m-danger"
    data-ouia-component-id="OUIA-Alert-danger-1"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="danger"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              transform=""
            />
          </svg>
        </ExclamationCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Danger alert:
      </span>
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - danger Title 1`] = `
<Alert
  title="Some title"
  variant="danger"
>
  <div
    aria-label="Danger Alert"
    className="pf-c-alert pf-m-danger"
    data-ouia-component-id="OUIA-Alert-danger-2"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="danger"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              transform=""
            />
          </svg>
        </ExclamationCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Danger alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - danger Toast alerts match snapsnot 1`] = `
<Alert
  aria-label="danger toast alert"
  isLiveRegion={true}
  title="Some title"
  variant="danger"
>
  <div
    aria-atomic="false"
    aria-label="danger toast alert"
    aria-live="polite"
    className="pf-c-alert pf-m-danger"
    data-ouia-component-id="OUIA-Alert-danger-8"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="danger"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              transform=""
            />
          </svg>
        </ExclamationCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Danger alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some toast alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - danger inline variation 1`] = `
<Alert
  isInline={true}
  title="Some title"
  variant="danger"
>
  <div
    aria-label="Danger Alert"
    className="pf-c-alert pf-m-inline pf-m-danger"
    data-ouia-component-id="OUIA-Alert-danger-7"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="danger"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              transform=""
            />
          </svg>
        </ExclamationCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Danger alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - default Action Close Button 1`] = `
<Alert
  actionClose={
    <AlertActionCloseButton
      aria-label="Close"
      onClose={[MockFunction]}
    />
  }
  title="Sample default alert"
  variant="default"
>
  <div
    aria-label="Default Alert"
    className="pf-c-alert"
    data-ouia-component-id="OUIA-Alert-default-5"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="default"
    >
      <div
        className="pf-c-alert__icon"
      >
        <BellIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 64 896 1024"
            width="1em"
          >
            <path
              d="M320.060356,128 L575.938356,128 C575.938356,57.3 518.639356,-0.001 448.000356,-0.001 L448.000356,-0.001 C377.361356,-0.001 320.060356,57.3 320.060356,128 L320.060356,128 Z M64.2023555,192 C25.9623555,192 0.202355518,223.199 -2.84217094e-13,256 L-2.84217094e-13,256 C-0.0976444824,271.1 5.22235552,286.54 17.2223555,299.419 L17.2223555,299.419 C55.8623555,340.94 128.161356,403.399 128.161356,608 L128.161356,608 C128.161356,763.4 237.121356,887.8 384.040356,918.32 L384.040356,918.32 L384.040356,960 C384.040356,995.339 412.679356,1024 448.000356,1024 L448.000356,1024 C483.319356,1024 511.959356,995.339 511.959356,960 L511.959356,960 L511.959356,918.32 C658.878356,887.8 767.837356,763.4 767.837356,608 L767.837356,608 C767.837356,403.4 840.138356,340.94 878.778356,299.42 L878.778356,299.42 C890.777356,286.52 896.096356,271.1 895.999684,256 L895.999684,256 C895.777356,223.2 870.037356,192 831.798356,192 L831.798356,192 L64.2023555,192 Z"
              transform="rotate(180 0 512) scale(-1 1)"
            />
          </svg>
        </BellIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Default alert:
      </span>
      Sample default alert
    </h4>
    <div
      className="pf-c-alert__action"
    >
      <AlertActionCloseButton
        aria-label="Close"
        onClose={[MockFunction]}
      >
        <Button
          aria-label="Close"
          onClick={[MockFunction]}
          variant="plain"
        >
          <button
            aria-disabled={false}
            aria-label="Close"
            className="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Button-plain-5"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <TimesIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  transform=""
                />
              </svg>
            </TimesIcon>
          </button>
        </Button>
      </AlertActionCloseButton>
    </div>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - default Action Link 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  title=""
  variant="default"
>
  <div
    aria-label="Default Alert"
    className="pf-c-alert"
    data-ouia-component-id="OUIA-Alert-default-4"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="default"
    >
      <div
        className="pf-c-alert__icon"
      >
        <BellIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 64 896 1024"
            width="1em"
          >
            <path
              d="M320.060356,128 L575.938356,128 C575.938356,57.3 518.639356,-0.001 448.000356,-0.001 L448.000356,-0.001 C377.361356,-0.001 320.060356,57.3 320.060356,128 L320.060356,128 Z M64.2023555,192 C25.9623555,192 0.202355518,223.199 -2.84217094e-13,256 L-2.84217094e-13,256 C-0.0976444824,271.1 5.22235552,286.54 17.2223555,299.419 L17.2223555,299.419 C55.8623555,340.94 128.161356,403.399 128.161356,608 L128.161356,608 C128.161356,763.4 237.121356,887.8 384.040356,918.32 L384.040356,918.32 L384.040356,960 C384.040356,995.339 412.679356,1024 448.000356,1024 L448.000356,1024 C483.319356,1024 511.959356,995.339 511.959356,960 L511.959356,960 L511.959356,918.32 C658.878356,887.8 767.837356,763.4 767.837356,608 L767.837356,608 C767.837356,403.4 840.138356,340.94 878.778356,299.42 L878.778356,299.42 C890.777356,286.52 896.096356,271.1 895.999684,256 L895.999684,256 C895.777356,223.2 870.037356,192 831.798356,192 L831.798356,192 L64.2023555,192 Z"
              transform="rotate(180 0 512) scale(-1 1)"
            />
          </svg>
        </BellIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Default alert:
      </span>
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Button-link-13"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - default Action and Title 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  title="Some title"
  variant="default"
>
  <div
    aria-label="Default Alert"
    className="pf-c-alert"
    data-ouia-component-id="OUIA-Alert-default-6"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="default"
    >
      <div
        className="pf-c-alert__icon"
      >
        <BellIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 64 896 1024"
            width="1em"
          >
            <path
              d="M320.060356,128 L575.938356,128 C575.938356,57.3 518.639356,-0.001 448.000356,-0.001 L448.000356,-0.001 C377.361356,-0.001 320.060356,57.3 320.060356,128 L320.060356,128 Z M64.2023555,192 C25.9623555,192 0.202355518,223.199 -2.84217094e-13,256 L-2.84217094e-13,256 C-0.0976444824,271.1 5.22235552,286.54 17.2223555,299.419 L17.2223555,299.419 C55.8623555,340.94 128.161356,403.399 128.161356,608 L128.161356,608 C128.161356,763.4 237.121356,887.8 384.040356,918.32 L384.040356,918.32 L384.040356,960 C384.040356,995.339 412.679356,1024 448.000356,1024 L448.000356,1024 C483.319356,1024 511.959356,995.339 511.959356,960 L511.959356,960 L511.959356,918.32 C658.878356,887.8 767.837356,763.4 767.837356,608 L767.837356,608 C767.837356,403.4 840.138356,340.94 878.778356,299.42 L878.778356,299.42 C890.777356,286.52 896.096356,271.1 895.999684,256 L895.999684,256 C895.777356,223.2 870.037356,192 831.798356,192 L831.798356,192 L64.2023555,192 Z"
              transform="rotate(180 0 512) scale(-1 1)"
            />
          </svg>
        </BellIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Default alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Button-link-14"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - default Custom aria label 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  aria-label="Custom aria label for default"
  title="Some title"
  variant="default"
>
  <div
    aria-label="Custom aria label for default"
    className="pf-c-alert"
    data-ouia-component-id="OUIA-Alert-default-7"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="default"
    >
      <div
        className="pf-c-alert__icon"
      >
        <BellIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 64 896 1024"
            width="1em"
          >
            <path
              d="M320.060356,128 L575.938356,128 C575.938356,57.3 518.639356,-0.001 448.000356,-0.001 L448.000356,-0.001 C377.361356,-0.001 320.060356,57.3 320.060356,128 L320.060356,128 Z M64.2023555,192 C25.9623555,192 0.202355518,223.199 -2.84217094e-13,256 L-2.84217094e-13,256 C-0.0976444824,271.1 5.22235552,286.54 17.2223555,299.419 L17.2223555,299.419 C55.8623555,340.94 128.161356,403.399 128.161356,608 L128.161356,608 C128.161356,763.4 237.121356,887.8 384.040356,918.32 L384.040356,918.32 L384.040356,960 C384.040356,995.339 412.679356,1024 448.000356,1024 L448.000356,1024 C483.319356,1024 511.959356,995.339 511.959356,960 L511.959356,960 L511.959356,918.32 C658.878356,887.8 767.837356,763.4 767.837356,608 L767.837356,608 C767.837356,403.4 840.138356,340.94 878.778356,299.42 L878.778356,299.42 C890.777356,286.52 896.096356,271.1 895.999684,256 L895.999684,256 C895.777356,223.2 870.037356,192 831.798356,192 L831.798356,192 L64.2023555,192 Z"
              transform="rotate(180 0 512) scale(-1 1)"
            />
          </svg>
        </BellIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Default alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Button-link-15"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - default Description 1`] = `
<Alert
  title=""
  variant="default"
>
  <div
    aria-label="Default Alert"
    className="pf-c-alert"
    data-ouia-component-id="OUIA-Alert-default-2"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="default"
    >
      <div
        className="pf-c-alert__icon"
      >
        <BellIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 64 896 1024"
            width="1em"
          >
            <path
              d="M320.060356,128 L575.938356,128 C575.938356,57.3 518.639356,-0.001 448.000356,-0.001 L448.000356,-0.001 C377.361356,-0.001 320.060356,57.3 320.060356,128 L320.060356,128 Z M64.2023555,192 C25.9623555,192 0.202355518,223.199 -2.84217094e-13,256 L-2.84217094e-13,256 C-0.0976444824,271.1 5.22235552,286.54 17.2223555,299.419 L17.2223555,299.419 C55.8623555,340.94 128.161356,403.399 128.161356,608 L128.161356,608 C128.161356,763.4 237.121356,887.8 384.040356,918.32 L384.040356,918.32 L384.040356,960 C384.040356,995.339 412.679356,1024 448.000356,1024 L448.000356,1024 C483.319356,1024 511.959356,995.339 511.959356,960 L511.959356,960 L511.959356,918.32 C658.878356,887.8 767.837356,763.4 767.837356,608 L767.837356,608 C767.837356,403.4 840.138356,340.94 878.778356,299.42 L878.778356,299.42 C890.777356,286.52 896.096356,271.1 895.999684,256 L895.999684,256 C895.777356,223.2 870.037356,192 831.798356,192 L831.798356,192 L64.2023555,192 Z"
              transform="rotate(180 0 512) scale(-1 1)"
            />
          </svg>
        </BellIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Default alert:
      </span>
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - default Title 1`] = `
<Alert
  title="Some title"
  variant="default"
>
  <div
    aria-label="Default Alert"
    className="pf-c-alert"
    data-ouia-component-id="OUIA-Alert-default-3"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="default"
    >
      <div
        className="pf-c-alert__icon"
      >
        <BellIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 64 896 1024"
            width="1em"
          >
            <path
              d="M320.060356,128 L575.938356,128 C575.938356,57.3 518.639356,-0.001 448.000356,-0.001 L448.000356,-0.001 C377.361356,-0.001 320.060356,57.3 320.060356,128 L320.060356,128 Z M64.2023555,192 C25.9623555,192 0.202355518,223.199 -2.84217094e-13,256 L-2.84217094e-13,256 C-0.0976444824,271.1 5.22235552,286.54 17.2223555,299.419 L17.2223555,299.419 C55.8623555,340.94 128.161356,403.399 128.161356,608 L128.161356,608 C128.161356,763.4 237.121356,887.8 384.040356,918.32 L384.040356,918.32 L384.040356,960 C384.040356,995.339 412.679356,1024 448.000356,1024 L448.000356,1024 C483.319356,1024 511.959356,995.339 511.959356,960 L511.959356,960 L511.959356,918.32 C658.878356,887.8 767.837356,763.4 767.837356,608 L767.837356,608 C767.837356,403.4 840.138356,340.94 878.778356,299.42 L878.778356,299.42 C890.777356,286.52 896.096356,271.1 895.999684,256 L895.999684,256 C895.777356,223.2 870.037356,192 831.798356,192 L831.798356,192 L64.2023555,192 Z"
              transform="rotate(180 0 512) scale(-1 1)"
            />
          </svg>
        </BellIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Default alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - default Toast alerts match snapsnot 1`] = `
<Alert
  aria-label="default toast alert"
  isLiveRegion={true}
  title="Some title"
  variant="default"
>
  <div
    aria-atomic="false"
    aria-label="default toast alert"
    aria-live="polite"
    className="pf-c-alert"
    data-ouia-component-id="OUIA-Alert-default-9"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="default"
    >
      <div
        className="pf-c-alert__icon"
      >
        <BellIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 64 896 1024"
            width="1em"
          >
            <path
              d="M320.060356,128 L575.938356,128 C575.938356,57.3 518.639356,-0.001 448.000356,-0.001 L448.000356,-0.001 C377.361356,-0.001 320.060356,57.3 320.060356,128 L320.060356,128 Z M64.2023555,192 C25.9623555,192 0.202355518,223.199 -2.84217094e-13,256 L-2.84217094e-13,256 C-0.0976444824,271.1 5.22235552,286.54 17.2223555,299.419 L17.2223555,299.419 C55.8623555,340.94 128.161356,403.399 128.161356,608 L128.161356,608 C128.161356,763.4 237.121356,887.8 384.040356,918.32 L384.040356,918.32 L384.040356,960 C384.040356,995.339 412.679356,1024 448.000356,1024 L448.000356,1024 C483.319356,1024 511.959356,995.339 511.959356,960 L511.959356,960 L511.959356,918.32 C658.878356,887.8 767.837356,763.4 767.837356,608 L767.837356,608 C767.837356,403.4 840.138356,340.94 878.778356,299.42 L878.778356,299.42 C890.777356,286.52 896.096356,271.1 895.999684,256 L895.999684,256 C895.777356,223.2 870.037356,192 831.798356,192 L831.798356,192 L64.2023555,192 Z"
              transform="rotate(180 0 512) scale(-1 1)"
            />
          </svg>
        </BellIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Default alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some toast alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - default inline variation 1`] = `
<Alert
  isInline={true}
  title="Some title"
  variant="default"
>
  <div
    aria-label="Default Alert"
    className="pf-c-alert pf-m-inline"
    data-ouia-component-id="OUIA-Alert-default-8"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="default"
    >
      <div
        className="pf-c-alert__icon"
      >
        <BellIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 64 896 1024"
            width="1em"
          >
            <path
              d="M320.060356,128 L575.938356,128 C575.938356,57.3 518.639356,-0.001 448.000356,-0.001 L448.000356,-0.001 C377.361356,-0.001 320.060356,57.3 320.060356,128 L320.060356,128 Z M64.2023555,192 C25.9623555,192 0.202355518,223.199 -2.84217094e-13,256 L-2.84217094e-13,256 C-0.0976444824,271.1 5.22235552,286.54 17.2223555,299.419 L17.2223555,299.419 C55.8623555,340.94 128.161356,403.399 128.161356,608 L128.161356,608 C128.161356,763.4 237.121356,887.8 384.040356,918.32 L384.040356,918.32 L384.040356,960 C384.040356,995.339 412.679356,1024 448.000356,1024 L448.000356,1024 C483.319356,1024 511.959356,995.339 511.959356,960 L511.959356,960 L511.959356,918.32 C658.878356,887.8 767.837356,763.4 767.837356,608 L767.837356,608 C767.837356,403.4 840.138356,340.94 878.778356,299.42 L878.778356,299.42 C890.777356,286.52 896.096356,271.1 895.999684,256 L895.999684,256 C895.777356,223.2 870.037356,192 831.798356,192 L831.798356,192 L64.2023555,192 Z"
              transform="rotate(180 0 512) scale(-1 1)"
            />
          </svg>
        </BellIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Default alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - info Action Close Button 1`] = `
<Alert
  actionClose={
    <AlertActionCloseButton
      aria-label="Close"
      onClose={[MockFunction]}
    />
  }
  title="Sample info alert"
  variant="info"
>
  <div
    aria-label="Info Alert"
    className="pf-c-alert pf-m-info"
    data-ouia-component-id="OUIA-Alert-info-4"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="info"
    >
      <div
        className="pf-c-alert__icon"
      >
        <InfoCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
              transform=""
            />
          </svg>
        </InfoCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Info alert:
      </span>
      Sample info alert
    </h4>
    <div
      className="pf-c-alert__action"
    >
      <AlertActionCloseButton
        aria-label="Close"
        onClose={[MockFunction]}
      >
        <Button
          aria-label="Close"
          onClick={[MockFunction]}
          variant="plain"
        >
          <button
            aria-disabled={false}
            aria-label="Close"
            className="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Button-plain-4"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <TimesIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  transform=""
                />
              </svg>
            </TimesIcon>
          </button>
        </Button>
      </AlertActionCloseButton>
    </div>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - info Action Link 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  title=""
  variant="info"
>
  <div
    aria-label="Info Alert"
    className="pf-c-alert pf-m-info"
    data-ouia-component-id="OUIA-Alert-info-3"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="info"
    >
      <div
        className="pf-c-alert__icon"
      >
        <InfoCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
              transform=""
            />
          </svg>
        </InfoCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Info alert:
      </span>
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Button-link-10"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - info Action and Title 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  title="Some title"
  variant="info"
>
  <div
    aria-label="Info Alert"
    className="pf-c-alert pf-m-info"
    data-ouia-component-id="OUIA-Alert-info-5"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="info"
    >
      <div
        className="pf-c-alert__icon"
      >
        <InfoCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
              transform=""
            />
          </svg>
        </InfoCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Info alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Button-link-11"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - info Custom aria label 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  aria-label="Custom aria label for info"
  title="Some title"
  variant="info"
>
  <div
    aria-label="Custom aria label for info"
    className="pf-c-alert pf-m-info"
    data-ouia-component-id="OUIA-Alert-info-6"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="info"
    >
      <div
        className="pf-c-alert__icon"
      >
        <InfoCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
              transform=""
            />
          </svg>
        </InfoCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Info alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Button-link-12"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - info Description 1`] = `
<Alert
  title=""
  variant="info"
>
  <div
    aria-label="Info Alert"
    className="pf-c-alert pf-m-info"
    data-ouia-component-id="OUIA-Alert-info-1"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="info"
    >
      <div
        className="pf-c-alert__icon"
      >
        <InfoCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
              transform=""
            />
          </svg>
        </InfoCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Info alert:
      </span>
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - info Title 1`] = `
<Alert
  title="Some title"
  variant="info"
>
  <div
    aria-label="Info Alert"
    className="pf-c-alert pf-m-info"
    data-ouia-component-id="OUIA-Alert-info-2"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="info"
    >
      <div
        className="pf-c-alert__icon"
      >
        <InfoCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
              transform=""
            />
          </svg>
        </InfoCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Info alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - info Toast alerts match snapsnot 1`] = `
<Alert
  aria-label="info toast alert"
  isLiveRegion={true}
  title="Some title"
  variant="info"
>
  <div
    aria-atomic="false"
    aria-label="info toast alert"
    aria-live="polite"
    className="pf-c-alert pf-m-info"
    data-ouia-component-id="OUIA-Alert-info-8"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="info"
    >
      <div
        className="pf-c-alert__icon"
      >
        <InfoCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
              transform=""
            />
          </svg>
        </InfoCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Info alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some toast alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - info inline variation 1`] = `
<Alert
  isInline={true}
  title="Some title"
  variant="info"
>
  <div
    aria-label="Info Alert"
    className="pf-c-alert pf-m-inline pf-m-info"
    data-ouia-component-id="OUIA-Alert-info-7"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="info"
    >
      <div
        className="pf-c-alert__icon"
      >
        <InfoCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
              transform=""
            />
          </svg>
        </InfoCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Info alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - success Action Close Button 1`] = `
<Alert
  actionClose={
    <AlertActionCloseButton
      aria-label="Close"
      onClose={[MockFunction]}
    />
  }
  title="Sample success alert"
  variant="success"
>
  <div
    aria-label="Success Alert"
    className="pf-c-alert pf-m-success"
    data-ouia-component-id="OUIA-Alert-success-4"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="success"
    >
      <div
        className="pf-c-alert__icon"
      >
        <CheckCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
              transform=""
            />
          </svg>
        </CheckCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Success alert:
      </span>
      Sample success alert
    </h4>
    <div
      className="pf-c-alert__action"
    >
      <AlertActionCloseButton
        aria-label="Close"
        onClose={[MockFunction]}
      >
        <Button
          aria-label="Close"
          onClick={[MockFunction]}
          variant="plain"
        >
          <button
            aria-disabled={false}
            aria-label="Close"
            className="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Button-plain-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <TimesIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  transform=""
                />
              </svg>
            </TimesIcon>
          </button>
        </Button>
      </AlertActionCloseButton>
    </div>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - success Action Link 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  title=""
  variant="success"
>
  <div
    aria-label="Success Alert"
    className="pf-c-alert pf-m-success"
    data-ouia-component-id="OUIA-Alert-success-3"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="success"
    >
      <div
        className="pf-c-alert__icon"
      >
        <CheckCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
              transform=""
            />
          </svg>
        </CheckCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Success alert:
      </span>
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Button-link-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - success Action and Title 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  title="Some title"
  variant="success"
>
  <div
    aria-label="Success Alert"
    className="pf-c-alert pf-m-success"
    data-ouia-component-id="OUIA-Alert-success-5"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="success"
    >
      <div
        className="pf-c-alert__icon"
      >
        <CheckCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
              transform=""
            />
          </svg>
        </CheckCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Success alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Button-link-2"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - success Custom aria label 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  aria-label="Custom aria label for success"
  title="Some title"
  variant="success"
>
  <div
    aria-label="Custom aria label for success"
    className="pf-c-alert pf-m-success"
    data-ouia-component-id="OUIA-Alert-success-6"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="success"
    >
      <div
        className="pf-c-alert__icon"
      >
        <CheckCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
              transform=""
            />
          </svg>
        </CheckCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Success alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Button-link-3"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - success Description 1`] = `
<Alert
  title=""
  variant="success"
>
  <div
    aria-label="Success Alert"
    className="pf-c-alert pf-m-success"
    data-ouia-component-id="OUIA-Alert-success-1"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="success"
    >
      <div
        className="pf-c-alert__icon"
      >
        <CheckCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
              transform=""
            />
          </svg>
        </CheckCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Success alert:
      </span>
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - success Title 1`] = `
<Alert
  title="Some title"
  variant="success"
>
  <div
    aria-label="Success Alert"
    className="pf-c-alert pf-m-success"
    data-ouia-component-id="OUIA-Alert-success-2"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="success"
    >
      <div
        className="pf-c-alert__icon"
      >
        <CheckCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
              transform=""
            />
          </svg>
        </CheckCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Success alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - success Toast alerts match snapsnot 1`] = `
<Alert
  aria-label="success toast alert"
  isLiveRegion={true}
  title="Some title"
  variant="success"
>
  <div
    aria-atomic="false"
    aria-label="success toast alert"
    aria-live="polite"
    className="pf-c-alert pf-m-success"
    data-ouia-component-id="OUIA-Alert-success-8"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="success"
    >
      <div
        className="pf-c-alert__icon"
      >
        <CheckCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
              transform=""
            />
          </svg>
        </CheckCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Success alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some toast alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - success inline variation 1`] = `
<Alert
  isInline={true}
  title="Some title"
  variant="success"
>
  <div
    aria-label="Success Alert"
    className="pf-c-alert pf-m-inline pf-m-success"
    data-ouia-component-id="OUIA-Alert-success-7"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="success"
    >
      <div
        className="pf-c-alert__icon"
      >
        <CheckCircleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
              transform=""
            />
          </svg>
        </CheckCircleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Success alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - warning Action Close Button 1`] = `
<Alert
  actionClose={
    <AlertActionCloseButton
      aria-label="Close"
      onClose={[MockFunction]}
    />
  }
  title="Sample warning alert"
  variant="warning"
>
  <div
    aria-label="Warning Alert"
    className="pf-c-alert pf-m-warning"
    data-ouia-component-id="OUIA-Alert-warning-4"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="warning"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationTriangleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              transform=""
            />
          </svg>
        </ExclamationTriangleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Warning alert:
      </span>
      Sample warning alert
    </h4>
    <div
      className="pf-c-alert__action"
    >
      <AlertActionCloseButton
        aria-label="Close"
        onClose={[MockFunction]}
      >
        <Button
          aria-label="Close"
          onClick={[MockFunction]}
          variant="plain"
        >
          <button
            aria-disabled={false}
            aria-label="Close"
            className="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Button-plain-3"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            onClick={[MockFunction]}
            type="button"
          >
            <TimesIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            >
              <svg
                aria-hidden={true}
                aria-labelledby={null}
                fill="currentColor"
                height="1em"
                role="img"
                style={
                  Object {
                    "verticalAlign": "-0.125em",
                  }
                }
                viewBox="0 0 352 512"
                width="1em"
              >
                <path
                  d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                  transform=""
                />
              </svg>
            </TimesIcon>
          </button>
        </Button>
      </AlertActionCloseButton>
    </div>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - warning Action Link 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  title=""
  variant="warning"
>
  <div
    aria-label="Warning Alert"
    className="pf-c-alert pf-m-warning"
    data-ouia-component-id="OUIA-Alert-warning-3"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="warning"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationTriangleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              transform=""
            />
          </svg>
        </ExclamationTriangleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Warning alert:
      </span>
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Button-link-7"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - warning Action and Title 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  title="Some title"
  variant="warning"
>
  <div
    aria-label="Warning Alert"
    className="pf-c-alert pf-m-warning"
    data-ouia-component-id="OUIA-Alert-warning-5"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="warning"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationTriangleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              transform=""
            />
          </svg>
        </ExclamationTriangleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Warning alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Button-link-8"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - warning Custom aria label 1`] = `
<Alert
  actionLinks={
    Array [
      <AlertActionLink>
        test
      </AlertActionLink>,
    ]
  }
  aria-label="Custom aria label for warning"
  title="Some title"
  variant="warning"
>
  <div
    aria-label="Custom aria label for warning"
    className="pf-c-alert pf-m-warning"
    data-ouia-component-id="OUIA-Alert-warning-6"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="warning"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationTriangleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              transform=""
            />
          </svg>
        </ExclamationTriangleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Warning alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
    <div
      className="pf-c-alert__action-group"
    >
      <AlertActionLink>
        <Button
          className=""
          isInline={true}
          variant="link"
        >
          <button
            aria-disabled={false}
            aria-label={null}
            className="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Button-link-9"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe={true}
            disabled={false}
            type="button"
          >
            test
          </button>
        </Button>
      </AlertActionLink>
    </div>
  </div>
</Alert>
`;

exports[`Alert - warning Description 1`] = `
<Alert
  title=""
  variant="warning"
>
  <div
    aria-label="Warning Alert"
    className="pf-c-alert pf-m-warning"
    data-ouia-component-id="OUIA-Alert-warning-1"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="warning"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationTriangleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              transform=""
            />
          </svg>
        </ExclamationTriangleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Warning alert:
      </span>
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - warning Title 1`] = `
<Alert
  title="Some title"
  variant="warning"
>
  <div
    aria-label="Warning Alert"
    className="pf-c-alert pf-m-warning"
    data-ouia-component-id="OUIA-Alert-warning-2"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="warning"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationTriangleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              transform=""
            />
          </svg>
        </ExclamationTriangleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Warning alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - warning Toast alerts match snapsnot 1`] = `
<Alert
  aria-label="warning toast alert"
  isLiveRegion={true}
  title="Some title"
  variant="warning"
>
  <div
    aria-atomic="false"
    aria-label="warning toast alert"
    aria-live="polite"
    className="pf-c-alert pf-m-warning"
    data-ouia-component-id="OUIA-Alert-warning-8"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="warning"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationTriangleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              transform=""
            />
          </svg>
        </ExclamationTriangleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Warning alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some toast alert
    </div>
  </div>
</Alert>
`;

exports[`Alert - warning inline variation 1`] = `
<Alert
  isInline={true}
  title="Some title"
  variant="warning"
>
  <div
    aria-label="Warning Alert"
    className="pf-c-alert pf-m-inline pf-m-warning"
    data-ouia-component-id="OUIA-Alert-warning-7"
    data-ouia-component-type="PF4/Alert"
    data-ouia-safe={true}
  >
    <AlertIcon
      variant="warning"
    >
      <div
        className="pf-c-alert__icon"
      >
        <ExclamationTriangleIcon
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        >
          <svg
            aria-hidden={true}
            aria-labelledby={null}
            fill="currentColor"
            height="1em"
            role="img"
            style={
              Object {
                "verticalAlign": "-0.125em",
              }
            }
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M569.517 440.013C587.975 472.007 564.806 512 527.94 512H48.054c-36.937 0-59.999-40.055-41.577-71.987L246.423 23.985c18.467-32.009 64.72-31.951 83.154 0l239.94 416.028zM288 354c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
              transform=""
            />
          </svg>
        </ExclamationTriangleIcon>
      </div>
    </AlertIcon>
    <h4
      className="pf-c-alert__title"
    >
      <span
        className="pf-u-screen-reader"
      >
        Warning alert:
      </span>
      Some title
    </h4>
    <div
      className="pf-c-alert__description"
    >
      Some alert
    </div>
  </div>
</Alert>
`;
